--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,11 @@ x-app: &app-tpl
     working_dir: /home/node/app
     environment:
       - NODE_ENV=docker
-      - JAEGER_AGENT_HOST=jaeger
-#    networks:
-#      - jaeger-tracing-network
     volumes:
       - ./:/home/node/app
     depends_on:
       - pgdb
-      - zookeeper
+#      - zookeeper
 
 services:
 #  payment-service:
@@ -35,51 +32,46 @@ services:
 #    ports:
 #      - "9002:9000"
 #    command: "npm run start:dev delivery-service"
-  coordinator-service:
-    <<: *app-tpl
-    container_name: coordinator-service
-    ports:
-      - "9003:9000"
-    command: "npm run start:dev coordinator-service"
+#  coordinator-service:
+#    <<: *app-tpl
+#    container_name: coordinator-service
+#    ports:
+#      - "9003:9000"
+#    command: "npm run start:dev coordinator-service"
+  order-service:
+      <<: *app-tpl
+      container_name: order-service
+      ports:
+        - "9004:9000"
+      command: >
+        /bin/sh -c "npm run typeorm:run --service=order-service
+        && npm run start:dev order-service"
   pgdb:
     hostname: pgdb
     image: postgres
     restart: always
     environment:
       POSTGRES_PASSWORD: mypassword
-#    networks:
-#      - jaeger-tracing-network
   adminer:
     image: adminer
     restart: always
     ports:
-      - 8080:8080
-#    networks:
-#      - jaeger-tracing-network
-  zookeeper:
-    image: 'bitnami/zookeeper:latest'
-    ports:
-      - '2181:2181'
-    environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
-#    networks:
-#      - jaeger-tracing-network
-  kafka:
-    image: 'bitnami/kafka:latest'
-    ports:
-      - '9092:9092'
-    environment:
-      - KAFKA_BROKER_ID=1
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - ALLOW_PLAINTEXT_LISTENER=yes
-    depends_on:
-      - zookeeper
-#    networks:
-#      - jaeger-tracing-network
-volumes:
-  redis:
-
-#networks:
-#  jaeger-tracing-network:
+      - "8080:8080"
+#  zookeeper:
+#    image: 'bitnami/zookeeper:latest'
+#    ports:
+#      - '2181:2181'
+#    environment:
+#      - ALLOW_ANONYMOUS_LOGIN=yes
+#  kafka:
+#    image: 'bitnami/kafka:latest'
+#    ports:
+#      - '9092:9092'
+#    environment:
+#      - KAFKA_BROKER_ID=1
+#      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+#      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
+#      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+#      - ALLOW_PLAINTEXT_LISTENER=yes
+#    depends_on:
+#      - zookeeper
