--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,33 +11,42 @@ x-app: &app-tpl
       - ./:/home/node/app
     depends_on:
       - pgdb
-#      - zookeeper
+      - zookeeper
 
 services:
-#  payment-service:
-#    <<: *app-tpl
-#    container_name: payment-service
-#    ports:
-#      - "9000:9000"
-#    command: "npm run start:dev payment-service"
-#  warehouse-service:
-#    <<: *app-tpl
-#    container_name: warehouse-service
-#    ports:
-#      - "9001:9000"
-#    command: "npm run start:dev warehouse-service"
-#  delivery-service:
-#    <<: *app-tpl
-#    container_name: delivery-service
-#    ports:
-#      - "9002:9000"
-#    command: "npm run start:dev delivery-service"
-#  coordinator-service:
-#    <<: *app-tpl
-#    container_name: coordinator-service
-#    ports:
-#      - "9003:9000"
-#    command: "npm run start:dev coordinator-service"
+  payment-service:
+    <<: *app-tpl
+    container_name: payment-service
+    ports:
+      - "9000:9000"
+    command: >
+      /bin/sh -c "npm run typeorm:run --service=payment-service
+      && npm run start:dev payment-service"
+  warehouse-service:
+    <<: *app-tpl
+    container_name: warehouse-service
+    ports:
+      - "9001:9000"
+    command: >
+      /bin/sh -c "npm run typeorm:run --service=warehouse-service
+      && npm run start:dev warehouse-service"
+  delivery-service:
+    <<: *app-tpl
+    container_name: delivery-service
+    ports:
+      - "9002:9000"
+    command: >
+      /bin/sh -c "npm run typeorm:run --service=delivery-service
+      && npm run start:dev delivery-service"
+
+  coordinator-service:
+    <<: *app-tpl
+    container_name: coordinator-service
+    ports:
+      - "9003:9000"
+    command: >
+      /bin/sh -c "npm run typeorm:run --service=coordinator-service
+      && npm run start:dev coordinator-service"
   order-service:
       <<: *app-tpl
       container_name: order-service
@@ -52,26 +61,28 @@ services:
     restart: always
     environment:
       POSTGRES_PASSWORD: mypassword
+    command: postgres -c log_statement=all -c max_prepared_transactions=90
+
   adminer:
     image: adminer
     restart: always
     ports:
       - "8080:8080"
-#  zookeeper:
-#    image: 'bitnami/zookeeper:latest'
-#    ports:
-#      - '2181:2181'
-#    environment:
-#      - ALLOW_ANONYMOUS_LOGIN=yes
-#  kafka:
-#    image: 'bitnami/kafka:latest'
-#    ports:
-#      - '9092:9092'
-#    environment:
-#      - KAFKA_BROKER_ID=1
-#      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-#      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
-#      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-#      - ALLOW_PLAINTEXT_LISTENER=yes
-#    depends_on:
-#      - zookeeper
+  zookeeper:
+    image: 'bitnami/zookeeper:latest'
+    ports:
+      - '2181:2181'
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+  kafka:
+    image: 'bitnami/kafka:latest'
+    ports:
+      - '9092:9092'
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    depends_on:
+      - zookeeper
